--- a/src/pages/folk/tree/index.less
+++ b/src/pages/folk/tree/index.less
@@ -40,3 +40,18 @@
   box-sizing: content-box;
   color: #333333;
 }
+.CursorFrame {
+  position: absolute;
+  font-family: 'Trebuchet MS', Tahoma, Verdana, Arial, sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  box-sizing: content-box;
+  border-radius: 4px;
+  border: 2px solid red;
+  background: rgb(255, 255, 255);
+  color: rgb(235, 143, 0);
+  width: 138px;
+  height: 78px;
+  left: -2px;
+  top: -2px;
+}
