--- a/src/pages/dashboard/components/village-profile.less
+++ b/src/pages/dashboard/components/village-profile.less
@@ -1,7 +1,7 @@
 @import '~themes/vars';
 
-.quote {
-  color: #fff;
+.village {
+  color: gray;
   height: 100%;
   width: 100%;
   padding: 24px;
@@ -36,17 +36,6 @@
           font-weight: 100;
         }
       }
-    }
-
-    .avatar {
-      width: 48px;
-      height: 48px;
-      background-position: center;
-      background-size: cover;
-      border-radius: 50%;
-      position: absolute;
-      right: 0;
-      top: 0;
     }
   }
 }
