--- a/src/pages/folk/tree/index.less
+++ b/src/pages/folk/tree/index.less
@@ -1,6 +1,7 @@
 .placeholder {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 .border {
   // Set border width.
@@ -13,7 +14,7 @@
 }
 .title {
   padding: 2px;
-  color: #ffffff;
+  color: #fff;
   text-align: center;
 }
 .content {
@@ -38,7 +39,7 @@
   user-select: none;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
-  color: #333333;
+  color: #333;
 }
 .CursorFrame {
   position: absolute;
